# De_coding_task

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/csv_processor/: clean.py  download.py  metrics.py  stats.py
tests/: test_clean.py
